add G1 notes